--- a/app/src/main/res/layout/activity_universo.xml
+++ b/app/src/main/res/layout/activity_universo.xml
@@ -6,4 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".Universo">
 
+    <GridView
+        android:id="@+id/columnas"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="10dp"
+        android:numColumns="2" />
 </LinearLayout>
