--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -96,6 +96,7 @@
         android:layout_width="121dp"
         android:layout_height="48dp"
         android:layout_marginTop="40dp"
+        android:forceDarkAllowed="false"
         android:text="Entrar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.293"
