--- a/app/src/main/res/layout/activity_titulos.xml
+++ b/app/src/main/res/layout/activity_titulos.xml
@@ -7,6 +7,7 @@
     tools:context=".Titulos">
 
     <ListView
+        android:id="@+id/listado"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </LinearLayout>
