--- a/app/src/main/res/layout/plan_two.xml
+++ b/app/src/main/res/layout/plan_two.xml
@@ -1,27 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginHorizontal="10dp"
         android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="match_parent"
-            android:layout_height="223dp"
+            android:id="@+id/imagen"
+            android:layout_width="wrap_content"
+            android:layout_height="190dp"
+            android:baselineAlignBottom="false"
+            android:contentDescription="TODO"
+            android:scaleType="centerCrop"
             app:srcCompat="@drawable/halo1" />
 
         <TextView
-            android:id="@+id/textView4"
+            android:id="@+id/nombre"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="40dp"
+            android:includeFontPadding="false"
             android:text="@string/textTitulo"
             android:textAlignment="center"
             android:textSize="24sp" />
+
     </LinearLayout>
 </LinearLayout>
