--- a/app/src/main/res/layout/plan_one.xml
+++ b/app/src/main/res/layout/plan_one.xml
@@ -11,7 +11,7 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/textView5"
+            android:id="@+id/nombre"
             android:layout_width="match_parent"
             android:layout_height="37dp"
             android:layout_marginTop="16dp"
@@ -25,7 +25,7 @@
             android:verticalScrollbarPosition="defaultPosition" />
 
         <ImageView
-            android:id="@+id/imageView2"
+            android:id="@+id/imagen"
             android:layout_width="150dp"
             android:layout_height="100dp"
             app:srcCompat="@drawable/hystro" />
