--- a/app/src/main/res/layout/plan_one.xml
+++ b/app/src/main/res/layout/plan_one.xml
@@ -12,13 +12,12 @@
 
         <TextView
             android:id="@+id/nombre"
-            android:layout_width="match_parent"
-            android:layout_height="37dp"
+            android:layout_width="256dp"
+            android:layout_height="52dp"
             android:layout_marginTop="16dp"
             android:layout_marginRight="5dp"
-            android:layout_marginBottom="16dp"
-            android:layout_weight="1"
             android:justificationMode="none"
+            android:paddingVertical="10dp"
             android:text="@string/txtApartado"
             android:textAlignment="center"
             android:textSize="24sp"
