--- a/app/src/main/res/layout/activity_titulos.xml
+++ b/app/src/main/res/layout/activity_titulos.xml
@@ -10,5 +10,6 @@
     <ListView
         android:id="@+id/listado"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:background="#A81E1C1C" />
 </LinearLayout>
