--- a/app/src/main/res/layout/activity_universo.xml
+++ b/app/src/main/res/layout/activity_universo.xml
@@ -12,5 +12,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="10dp"
+        android:background="#6D1E1C1C"
         android:numColumns="2" />
 </LinearLayout>
