--- a/app/src/main/res/layout/activity_detalles.xml
+++ b/app/src/main/res/layout/activity_detalles.xml
@@ -15,6 +15,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="#6D1E1C1C"
             android:orientation="vertical">
 
             <ImageView
@@ -30,7 +31,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="10dp"
-                android:background="#A81E1C1C"
                 android:lineSpacingExtra="8sp"
                 android:text="@string/tvHalo"
                 android:textAlignment="center"
@@ -48,9 +48,38 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="10dp"
-                android:background="#A81E1C1C"
                 android:lineSpacingExtra="8sp"
                 android:text="@string/tvHalo2"
+                android:textAlignment="center"
+                android:textColor="@color/white" />
+
+            <TextView
+                android:id="@+id/textView6"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="10dp"
+                android:lineSpacingExtra="8sp"
+                android:text="@string/tvHalo3"
+                android:textAlignment="center"
+                android:textColor="@color/white" />
+
+            <TextView
+                android:id="@+id/textView7"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="10dp"
+                android:lineSpacingExtra="8sp"
+                android:text="@string/tvHalo4"
+                android:textAlignment="center"
+                android:textColor="@color/white" />
+
+            <TextView
+                android:id="@+id/textView8"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="10dp"
+                android:lineSpacingExtra="8sp"
+                android:text="@string/tvHalo5"
                 android:textAlignment="center"
                 android:textColor="@color/white" />
 
