--- a/app/src/main/res/layout/plan_one.xml
+++ b/app/src/main/res/layout/plan_one.xml
@@ -20,6 +20,7 @@
             android:paddingVertical="10dp"
             android:text="@string/txtApartado"
             android:textAlignment="center"
+            android:textColor="@color/white"
             android:textSize="24sp"
             android:verticalScrollbarPosition="defaultPosition" />
 
