--- a/app/src/main/res/layout/plan_two.xml
+++ b/app/src/main/res/layout/plan_two.xml
@@ -17,6 +17,7 @@
             android:layout_width="wrap_content"
             android:layout_height="190dp"
             android:layout_marginTop="23dp"
+            android:adjustViewBounds="false"
             android:baselineAlignBottom="false"
             android:contentDescription="TODO"
             android:scaleType="centerCrop"
