--- a/app/src/main/res/layout/activity_detalles.xml
+++ b/app/src/main/res/layout/activity_detalles.xml
@@ -32,9 +32,11 @@
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="10dp"
                 android:lineSpacingExtra="8sp"
+                android:paddingHorizontal="10dp"
                 android:text="@string/tvHalo"
                 android:textAlignment="center"
-                android:textColor="@color/white" />
+                android:textColor="@color/white"
+                android:textStyle="italic" />
 
             <ImageView
                 android:id="@+id/imageView8"
@@ -49,9 +51,11 @@
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="10dp"
                 android:lineSpacingExtra="8sp"
+                android:paddingHorizontal="10dp"
                 android:text="@string/tvHalo2"
                 android:textAlignment="center"
-                android:textColor="@color/white" />
+                android:textColor="@color/white"
+                android:textStyle="italic" />
 
             <TextView
                 android:id="@+id/textView6"
@@ -59,9 +63,11 @@
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="10dp"
                 android:lineSpacingExtra="8sp"
+                android:paddingHorizontal="10dp"
                 android:text="@string/tvHalo3"
                 android:textAlignment="center"
-                android:textColor="@color/white" />
+                android:textColor="@color/white"
+                android:textStyle="italic" />
 
             <TextView
                 android:id="@+id/textView7"
@@ -69,9 +75,11 @@
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="10dp"
                 android:lineSpacingExtra="8sp"
+                android:paddingHorizontal="10dp"
                 android:text="@string/tvHalo4"
                 android:textAlignment="center"
-                android:textColor="@color/white" />
+                android:textColor="@color/white"
+                android:textStyle="italic" />
 
             <TextView
                 android:id="@+id/textView8"
@@ -79,9 +87,11 @@
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="10dp"
                 android:lineSpacingExtra="8sp"
+                android:paddingHorizontal="10dp"
                 android:text="@string/tvHalo5"
                 android:textAlignment="center"
-                android:textColor="@color/white" />
+                android:textColor="@color/white"
+                android:textStyle="italic" />
 
         </LinearLayout>
 
