--- a/app/src/main/res/layout/plan_two.xml
+++ b/app/src/main/res/layout/plan_two.xml
@@ -25,6 +25,7 @@
 
         <TextView
             android:id="@+id/nombre"
+            style="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:includeFontPadding="false"
