--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
-        android:background="#461E1C1C"
+        android:background="@drawable/background"
         android:paddingHorizontal="10dp"
         android:text="@string/textTitulo"
         android:textAlignment="center"
@@ -78,7 +78,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="240dp"
-        android:background="#611E1C1C"
+        android:background="@drawable/background"
         android:paddingHorizontal="10dp"
         android:text="Usuario"
         android:textColor="@color/white"
@@ -92,7 +92,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:background="#611E1C1C"
+        android:background="@drawable/background"
         android:paddingHorizontal="10dp"
         android:text="Contraseña"
         android:textColor="@color/white"
@@ -104,6 +104,7 @@
 
     <Button
         android:id="@+id/btnEntrar"
+        style="@style/Widget.AppCompat.Button"
         android:layout_width="121dp"
         android:layout_height="48dp"
         android:layout_marginTop="40dp"
